<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>surefire-1157-test</artifactId>
   <version>1.0-SNAPSHOT</version>
   <dependencies>
      <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>6.8.8</version>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.3</version>
            <configuration>
               <source>1.8</source>
               <target>1.8</target>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
            <configuration>
               <forkCount>1</forkCount>
               <reuseForks>true</reuseForks>
               <trimStackTrace>false</trimStackTrace>
               <!--<argLine>-XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xmx30m -XX:+PrintGCTimeStamps-->
                  <!--<!-&#45;&#45;XX:+PrintGCApplicationStoppedTime&ndash;&gt;-->
               <!--</argLine>-->
               <argLine>-XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xmx200m -XX:+PrintGCTimeStamps
                  -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCDetails
               </argLine>
               <properties>
                  <property>
                     <name>usedefaultlisteners</name>
                     <value>false</value>
                  </property>
               </properties>
            </configuration>
         </plugin>
      </plugins>
   </build>

</project>